--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/fontawesome.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/sprites/regular.svg"> -->
 
     <script src="js/index.js"></script>
 </head>
@@ -88,7 +91,7 @@
                 <div class="main_2_2_1">
                     <div>
                         <h1>20+</h1>
-                    <p>Years of Experience</p>
+                        <p>Years of Experience</p>
                     </div>
                     <div>
                         <h1>1000+</h1>
@@ -98,9 +101,9 @@
                 <div class="main_2_2_2">
                     <div>
                         <h1>300+</h1>
-                    <p>Satisfied Client</p>
+                        <p>Satisfied Client</p>
                     </div>
-                    <div >
+                    <div>
                         <h1>64</h1>
                         <p>Certifid Award</p>
                     </div>
@@ -108,17 +111,59 @@
             </div>
         </div>
         <div class="main_3">
-<div class="main_3_1">
-    <p>Hire Us Now</p>
-    <h1>We Are Always Ready TO<br>
-    Take A Perfect Shot</h1>
-    <a href="">Get Started</a>
-</div>
+            <div class="main_3_1">
+                <p>Hire Us Now</p>
+                <h1>We Are Always Ready TO<br>
+                    Take A Perfect Shot</h1>
+                <a href="">Get Started</a>
+            </div>
         </div>
     </main>
     <footer>
         <div class="footer">
+            <div class="Footer_c_1">
+                <ul class="foot_logo">
+                    <li><i class="fas fa-video"></i></li>
+                    <li>MyWeb</li>
+                </ul>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem asperiores dolores adipisci
+                        debitis molestiae neque, modi nam libero ipsum natus!</li>
+                </ul>
+                <ul class="Footer_c_1_3">
+                    <li><a href=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+                    <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                    <li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 
+                </ul>
+
+            </div>
+            <hr>
+            <div class="Footer_c_2">
+                <h3>Our Store</h3>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Service</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+            <hr>
+            <div class="Footer_c_3">
+                <h3>Get In Touch</h3>
+                <ul>
+                    <li><i class="fa fa-map" aria-hidden="true"></i>2443 Dak Ridge Omaha, QA 45065</li>
+                    <li><i class="fa fa-phone" aria-hidden="true"></i>123-456-7894</li>
+                    <li><i class="fa fa-whatsapp" aria-hidden="true"></i>345-567-1234</li>
+                    <li><i class="fa fa-envelope" aria-hidden="true"></i>https://www.google.com/</li>
+                </ul>
+            </div>
+            <hr>
+           
+        </div>
+        <div class="footer_last">
+            <p>copyright @ 2024 vigraph | Powered by BOBI BUTT</p>
         </div>
     </footer>
 </body>
